--- a/css/creative.css
+++ b/css/creative.css
@@ -54,8 +54,12 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
+article, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
+}
+
+aside {
+  padding: 50px 0;
 }
 
 body {
