--- a/css/creative.css
+++ b/css/creative.css
@@ -9573,6 +9573,10 @@ html {
   color: rgba(255, 255, 255, 0.75);
 }
 
+.text-white-60 {
+  color: rgba(255, 255, 255, 0.60);
+}
+
 hr.divider {
   max-width: 3.25rem;
   border-width: 0.2rem;
@@ -9725,26 +9729,35 @@ header.masthead h1 {
   color: #fff;
   /* background: rgba(244, 98, 58, 0.9); */
   /* have to manually change portfolio hover color here */
-  background: rgba(40,167,69, 0.9); 
+  /* background: rgba(40,167,69, 0.9);  */
   transition: opacity 0.25s ease;
   text-align: center;
 }
 
 #portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-category {
   font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 0.85rem;
+  font-size: 1.2rem;
   font-weight: 600;
   text-transform: uppercase;
+  text-shadow: #000 1px 0 5px;
 }
 
 #portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-name {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
+  text-shadow: #000 1px 0 5px;
 }
 
 #portfolio .project-subtitle {
-  font-size: 0.85rem;
+  font-size: 1.2rem;
+  text-shadow: #000 1px 0 5px;
 }
 
 #portfolio .container-fluid .portfolio-box:hover .portfolio-box-caption {
   opacity: 1;
+}
+
+@media (hover: none) and (any-pointer: coarse) {
+  #portfolio .container-fluid .portfolio-box .portfolio-box-caption {
+    opacity: 1;
+  }
 }
