change any-pointer to pointer:fine

--- a/css/creative.css
+++ b/css/creative.css
@@ -9751,7 +9751,7 @@ header.masthead h1 {
   text-shadow: #000 1px 0 5px;
 }
 /* if user DOES have a mouse, show caption on hover */
-@media (hover: hover) and (any-pointer: fine) {
+@media (hover: hover) and (pointer: fine) {
   #portfolio .container-fluid .portfolio-box:hover .portfolio-box-caption {
     background: var(--portfolio-bg);
     opacity: 1;
